correct footer and cards gap

--- a/style.css
+++ b/style.css
@@ -511,7 +511,7 @@ ul {
   }
 
   .about-section-container {
-    width: 100vw;
+    width: 100%;
   }
 
   .lang-arrow-container {
@@ -534,13 +534,20 @@ ul {
     color: #344563;
   }
 
+  .ekilaka {
+    height: 150px;
+    background-color: #fff;
+    width: 100%;
+  }
+
   #footer {
     background-color: #6070ff;
     background-image: url(./images/back-footer.png);
-    height: 846px;
+    height: 949px;
     width: 100%;
     background-size: contain;
     background-position: bottom;
+    margin-top: -85px;
   }
 
   .mini-footer {
